--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -7,12 +7,18 @@
   <title>Webernetic-test</title>
   <link
     rel="preload"
-    href="fonts/MullerRegular.woff2"
+    href="fonts/Manrope-Regular.woff2"
     as="font"
     type="font/woff2"
     crossorigin
   />
-  <link rel="stylesheet" href="css/vendor.css" />
+  <link
+    rel="preload"
+    href="fonts/Manrope-Medium.woff2"
+    as="font"
+    type="font/woff2"
+    crossorigin
+  />
   <link rel="stylesheet" href="css/main.css" />
   <script defer src="js/main.js"></script>
 </head>
