--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,4 +1,2 @@
-@include font-face("OpenSans", "../fonts/OpenSans-Bold", 600, normal);
-@include font-face("OpenSans", "../fonts/OpenSans-SemiBold", 700, normal);
-@include font-face("OpenSans", "../fonts/OpenSans-Regular", 400, normal);
-@include font-face("OpenSans", "../fonts/OpenSans-Light", 300, normal);
+@include font-face("Manrope", "../fonts/Manrope-Medium", 500, normal);
+@include font-face("Manrope", "../fonts/Manrope-Regular", 400, normal);
