--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -23,7 +23,6 @@ html {
   font-size: 16px;
 }
 
-
 a {
   text-decoration: none;
 }
@@ -80,7 +79,7 @@ a {
 
 .container {
   margin: 0 auto;
-  padding: 0 var(--container-offset);
+  padding: 35px var(--container-offset);
   max-width: var(--container-width);
 }
 
@@ -104,4 +103,43 @@ a {
 
 .page--ios .dis-scroll {
   position: relative;
+}
+@keyframes tada {
+  0% {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+  10%,
+  20% {
+    -webkit-transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+    transform: scale3d(0.9, 0.9, 0.9) rotate(-3deg);
+  }
+  30%,
+  50%,
+  70%,
+  90% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+    transform: scale3d(1.1, 1.1, 1.1) rotate(3deg);
+  }
+  40%,
+  60%,
+  80% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+    transform: scale3d(1.1, 1.1, 1.1) rotate(-3deg);
+  }
+  to {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
+}
+
+@media all and (max-width: 1160px) {
+  .container {
+    padding: 24px var(--container-offset);
+  }
+}
+@media all and (max-width: 570px) {
+  .container {
+    padding: 14px var(--container-offset);
+  }
 }
