--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,11 @@
             не менее 2500 средних и малых проектов. Используя знания и
             накопленный опыт мы можем предложить
           </p>
-          <button class="btn-reset hero-desc__btn">
+          <button
+            type="button"
+            class="btn-reset hero-desc__btn"
+            data-btn-modal="login"
+          >
             <span class="hero-desc__btn-text">Попробовать бесплатно</span>
             <svg class="hero-desc__btn-icon">
               <use xlink:href="img/sprite.svg#arrow-btn"></use>
