--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -10,10 +10,13 @@
   // colors
   --light: #ffffff;
   --bg-main: #ebf0fa;
+  --bg-modal: #f0f4fc;
+  --bg-input: #d7e2f6;
   --bg-btn: #244c98;
   --text-blue: #1f4284;
   --text-main: #323232;
   --text-gray: #727272;
+  --hover-btn: #223f77;
 }
 @media all and (max-width: 768px) {
   :root {
