--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,4 +8,7 @@
 // подключения компонентов страницы
 //Hero
 @import "components/_hero";
+//modal
 @import "components/_modal";
+//Form
+@import "components/_form";
